# teapot

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
include/: application.h
include/gl/: window.h
include/gl/hw/: keyboard.h  mouse.h
include/gl/materials/: material.h
include/gl/primitives/: points.h
include/gl/shapes/: shape.h  teapot.h
include/gl/utils/: camera.h  color.h  lightparameters.h  transformation.h
include/gl/utils/scene/: camera.h  light.h  sceneobject.h
include/hw/: keyboard.h  mouse.h
include/opengl/: oglwindow.h
include/opengl/factory/: ogllightfactory.h
include/opengl/hw/: oglkeyboard.h  oglmouse.h
include/opengl/materials/: oglmaterial.h
include/opengl/primitives/: oglpoints.h
include/opengl/shapes/: teapot.h
include/opengl/utils/scene/: oglcamera.h  ogllight.h
src/: application.cpp  main.cpp
src/gl/: window.cpp
src/gl/hw/: keyboard.cpp  mouse.cpp
src/gl/materials/: material.cpp
src/gl/primitives/: points.cpp
src/gl/shapes/: teapot.cpp
src/gl/utils/: camera.cpp  color.cpp  lightparameters.cpp  transformation.cpp
src/gl/utils/scene/: camera.cpp  light.cpp  sceneobject.cpp
src/opengl/: oglwindow.cpp
src/opengl/factory/: ogllightfactory.cpp
src/opengl/hw/: oglkeyboard.cpp  oglmouse.cpp
src/opengl/materials/: oglmaterial.cpp
src/opengl/primitives/: oglpoints.cpp
src/opengl/shapes/: teapot.cpp
src/opengl/utils/scene/: oglcamera.cpp  ogllight.cpp
